--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Padre-Plugin-LaTeX
 
+0.04   2010.10.26
+	Nothing... Simply a reupload of 0.03 (AZAWAWI)
+
 0.03   2010.10.26
         Syntax checking still crashes; will improve later (ZENOG)
         Added Italian translation (SBLADIN)
