Import of AZAWAWI/Padre-Plugin-LaTeX-0.05 from CPAN.
gitpan-cpan-distribution: Padre-Plugin-LaTeX
gitpan-cpan-version:      0.05
gitpan-cpan-path:         AZAWAWI/Padre-Plugin-LaTeX-0.05.tar.gz
gitpan-cpan-author:       AZAWAWI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,7 +1,10 @@
 Revision history for Padre-Plugin-LaTeX
 
+0.05   2010.10.26
+        Updated Arabic translation since it was not working (AZAWAWI)
+
 0.04   2010.10.26
-	Nothing... Simply a reupload of 0.03 (AZAWAWI)
+        Nothing... Simply a reupload of 0.03 (AZAWAWI)
 
 0.03   2010.10.26
         Syntax checking still crashes; will improve later (ZENOG)
