Import of AZAWAWI/Padre-Plugin-LaTeX-0.06 from CPAN.
gitpan-cpan-distribution: Padre-Plugin-LaTeX
gitpan-cpan-version:      0.06
gitpan-cpan-path:         AZAWAWI/Padre-Plugin-LaTeX-0.06.tar.gz
gitpan-cpan-author:       AZAWAWI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Padre-Plugin-LaTeX
 
+0.06   2010.10.27
+        t/00-load.t is magically injected by [@PadrePlugin] via [LoadTests] (AZAWAWI)
+
 0.05   2010.10.26
         Updated Arabic translation since it was not working (AZAWAWI)
 
