Import of AZAWAWI/Padre-Plugin-LaTeX-0.07 from CPAN.
gitpan-cpan-distribution: Padre-Plugin-LaTeX
gitpan-cpan-version:      0.07
gitpan-cpan-path:         AZAWAWI/Padre-Plugin-LaTeX-0.07.tar.gz
gitpan-cpan-author:       AZAWAWI
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 
 
 This archive contains the distribution Padre-Plugin-LaTeX,
-version 0.06:
+version 0.07:
 
-  L<Padre> and LaTeX
+  LaTeX Support for Padre
 
 This software is copyright (c) 2010 by Zeno Gantner.
 
