--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Padre-Plugin-LaTeX
 
+0.08   2010.12.06
+	Restored missing POT/PO translation sources (Damyan Ivanov, AZAWAWI)
+	add hint about BibTeX highlighting in Kate plugin (ZENOG)
+	add BibTeX support (commenting in and out) (ZENOG)
+	update German translation (ZENOG)
+	fix problem with dist.ini: multiple values for copyright_holder (ZENOG)
+
 0.07   2010.10.29
         Removed Test::NeedsDisplay dependency (AZAWAWI)
 
