--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 
 
 This archive contains the distribution Padre-Plugin-LaTeX,
-version 0.07:
+version 0.08:
 
   LaTeX Support for Padre
 
-This software is copyright (c) 2010 by Zeno Gantner.
+This software is copyright (c) 2010 by Zeno Gantner, Ahmad M. Zawawi.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
