--- a/TODO
+++ b/TODO
@@ -1,24 +1,14 @@
 TÒDO
+ - BibTeX syntax highlighting
  - add icon for the plugin manager
- - use LaTeX::Table for a table generation wizard: http://search.cpan.org/dist/LaTeX-Table/lib/LaTeX/Table.pm
- - other tools to possibly use
-   - latexmk (run LaTeX the correct number of times)
-   - LaTeX::Encode, TeX::Encode
-   - preview-latex (used by AucTeX)
-   - chktex (typographic errors)
-   - lacheck (simple one-pass checker)
- - auto completion (keywords, commands/symbols, labels, BibTeX entries)
  - create DVI, PS, PDF
    - display errors
    - jump to error location in file
    - show missing references and syntax errors
  - spell checking
- - insertion of special characters (snippets/menu)
+ - insertion of special characters (menu)
  - insertion of tables, enumerations, etc. via snippets
  - special treatment of tabular environment: transpose and swap columns or rows
- - integration of detexify
- - icons for the tool bar
- - BibLaTeX support
  - document outline
    - sections/chapter/appendix/abstract
    - command definitions
@@ -27,14 +17,23 @@ TÒDO
    - tableofcontents, etc.
  - function list
    - command definitions
- - syntax checking
  - jump to command definition, bib item, reference label
  - automatic insertion of '' and ``
  - pretty printing
  - Windows support
  - settings dialog
  - open corresponding BibTeX files
+ - tool bar integration
  - open included/inserted files
+ - have some kind of notion of LaTeX projects (one directory ...)
+ - use LaTeX::Table for a table generation wizard: http://search.cpan.org/dist/LaTeX-Table/lib/LaTeX/Table.pm
  - context-sensitive help
  - check out LaTeX editors/frontends like LyX, vim, emacs, gedit for interesting
    features
+ - BibLaTeX support
+ - other tools to possibly use
+   - latexmk (run LaTeX the correct number of times)
+   - LaTeX::Encode, TeX::Encode
+   - preview-latex (used by AucTeX)
+   - chktex (typographic errors)
+   - lacheck (simple one-pass checker)
