--- a/share/locale/Padre__Plugin__LaTeX-tr.po
+++ b/share/locale/Padre__Plugin__LaTeX-tr.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Padre2It\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-12-03 14:08+0100\n"
-"PO-Revision-Date: 2010-12-07 14:49+0100\n"
-"Last-Translator: Simone Blandino <simone.blandino@gmail.com>\n"
+"PO-Revision-Date: 2010-12-07 01:32+0100\n"
+"Last-Translator: Burak Gürsoy <burak@cpan.org>\n"
 "Language-Team:  <simone.blandino@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,23 +23,23 @@ msgstr "LaTeX"
 
 #: lib/Padre/Plugin/LaTeX.pm:27
 msgid "About"
-msgstr "Informazioni su"
+msgstr "Hakkında"
 
 #: lib/Padre/Plugin/LaTeX.pm:28
 msgid "Create/Update PDF"
-msgstr "Crea/Aggiorna PDF"
+msgstr "PDF Oluştur/Güncelle"
 
 #: lib/Padre/Plugin/LaTeX.pm:29
 msgid "View PDF"
-msgstr "Visualizza PDF"
+msgstr "PDF Görüntüle"
 
 #: lib/Padre/Plugin/LaTeX.pm:30
 msgid "Run BibTeX"
-msgstr "Esegui BibTeX"
+msgstr "BibTeX Çalıştır"
 
 #: lib/Padre/Plugin/LaTeX.pm:47
 msgid "LaTeX Plug-in"
-msgstr "Plug-in LaTeX"
+msgstr "LaTeX Eklentisi"
 
 #: lib/Padre/Plugin/LaTeX.pm:50
 #, perl-format
@@ -51,22 +51,22 @@ msgid ""
 "Copyright 2010 %s\n"
 "This plug-in is free software; you can redistribute it and/or modify it under the same terms as Padre.\n"
 msgstr ""
-"Supporto LaTeX per Padre\n"
+"Padre için LaTeX desteği\n"
 "\n"
-"Per l'evidenziazione sintassi dei file BibTeX installare il plugin Kate: Padre::Plugin::Kate\n"
+"BibTeX dosyalarının renklendirilmesi için Kate eklentisini kurun: Padre::Plugin::Kate\n"
 "\n"
-"Copyright 2010 %s\n"
-"Questo plugin è software libero; puoi redistribuirlo e/o modificarlo negli stessi termini di Padre.\n"
+"Telif hakkı 2010 %s\n"
+"Bu eklenti ücretsiz bir yazılımdır; Padre ile aynı lisans altında tekrar dağıtabilir ve/veya değiştirebilirsiniz.\n"
 
 #: lib/Padre/Plugin/LaTeX.pm:76
 msgid "Creating PDF files is only supported for LaTeX documents."
-msgstr "Creare un file pdf è consentito solo per i documenti LaTeX."
+msgstr "PDF belgeleri oluşturma seçeneği sadece LaTeX belgeleriyle desteklenmektedir."
 
 #: lib/Padre/Plugin/LaTeX.pm:102
 msgid "Running BibTeX is only supported for LaTeX documents."
-msgstr "Eseguire BibTeX è consentito solo per i documenti LaTeX."
+msgstr "BibTeX çalıştırma sadece LaTeX belgeleriyle desteklenmektedir."
 
 #: lib/Padre/Plugin/LaTeX.pm:122
 msgid "Viewing PDF files is only supported for LaTeX documents."
-msgstr "Visualizzare i file PDF è consentito solo per i documenti LaTeX."
+msgstr "PDF belgelerinin görüntülenmesi sadece LaTeX belgeleri için desteklenmektedir."
 
