--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Changes for Padre-Plugin-LaTeX
 
+0.10   2011.03.09
+        - check for different PDF viewers (ZENOG)
+        - compatibility to Padre 0.81 and later (ZENOG)
+        - add icon (ZENOG)
+        - create temporary file/directory for syntax check (ZENOG)
+        - update German translation (ZENOG)
+
 0.09   2011.02.07
         - add Dutch translation (ddn123456 - Dirk De Nijs)
 	- add autocompletion support for LaTeX: complete commands, packages,
