--- a/share/locale/Padre__Plugin__LaTeX-pt-br.po
+++ b/share/locale/Padre__Plugin__LaTeX-pt-br.po
@@ -1,42 +1,42 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Portuguese translations for Padre-Plugin-LaTeX package.
+# Copyright (C) 2011 THE Padre-Plugin-LaTeX'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the Padre-Plugin-LaTeX package.
+# garu <garu@cpan.org>, 2011.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Padre2It\n"
+"Project-Id-Version: Padre-Plugin-LaTeX\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-03-09 18:29+0100\n"
-"PO-Revision-Date: 2011-05-09 03:59+0200\n"
-"Last-Translator: Burak Gürsoy <burak@cpan.org>\n"
-"Language-Team:  <simone.blandino@gmail.com>\n"
+"PO-Revision-Date: 2011-05-15 01:43-0300\n"
+"Last-Translator: Breno G. de Oliveira <garu@cpan.org>\n"
+"Language-Team: Brazilian Portuguese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Italian\n"
-"X-Poedit-Country: ITALY\n"
+"Language: pt_BR\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: lib/Padre/Plugin/LaTeX.pm:47
 msgid "About"
-msgstr "Hakkında"
+msgstr "Sobre"
 
 #: lib/Padre/Plugin/LaTeX.pm:142
 #, perl-format
 msgid "Could not find file '%s'."
-msgstr "'%s' dosyası bulunamıyor."
+msgstr "Não foi possível encontrar arquivo '%s'."
 
 #: lib/Padre/Plugin/LaTeX.pm:40
 msgid "Create/Update PDF"
-msgstr "PDF Oluştur/Güncelle"
+msgstr "Criar/Atualizar PDF"
 
 #: lib/Padre/Plugin/LaTeX.pm:88
 msgid "Creating PDF files is only supported for LaTeX documents."
-msgstr "PDF belgeleri oluşturma seçeneği sadece LaTeX belgeleriyle desteklenmektedir."
+msgstr "Criação de PDF só é possível para documentos LaTeX."
 
 #: lib/Padre/Plugin/LaTeX.pm:44
 msgid "Find Symbol/Special Character"
-msgstr "Sembol/Özel damga bul"
+msgstr "Encontrar Símbolo/Caractere Especial"
 
 #: lib/Padre/Plugin/LaTeX.pm:14
 msgid "LaTeX"
@@ -44,7 +44,7 @@ msgstr "LaTeX"
 
 #: lib/Padre/Plugin/LaTeX.pm:59
 msgid "LaTeX Plug-in"
-msgstr "LaTeX Eklentisi"
+msgstr "Plugin LaTeX"
 
 #: lib/Padre/Plugin/LaTeX.pm:62
 #, perl-format
@@ -56,26 +56,26 @@ msgid ""
 "Copyright 2010, 2011 %s\n"
 "This plug-in is free software; you can redistribute it and/or modify it under the same terms as Padre.\n"
 msgstr ""
-"Padre için LaTeX desteği\n"
+"Suporte LaTeX no Padre\n"
 "\n"
-"BibTeX dosyalarının renklendirilmesi için Kate eklentisini kurun: Padre::Plugin::Kate\n"
+"Para coloração de sintaxe de arquivos BibTex instale o plugin Kate: Padre::Plugin::Kate\n"
 "\n"
-"Telif hakkı 2010, 2011 %s\n"
-"Bu eklenti ücretsiz bir yazılımdır; Padre ile aynı lisans altında tekrar dağıtabilir ve/veya değiştirebilirsiniz.\n"
+"Copyright-2010, 2011 %s\n"
+"Este Plugin é software livre; você pode redistribuir e/ou modificá-lo sob os mesmos termos do Padre.\n"
 
 #: lib/Padre/Plugin/LaTeX.pm:42
 msgid "Run BibTeX"
-msgstr "BibTeX Çalıştır"
+msgstr "Executar BibTeX"
 
 #: lib/Padre/Plugin/LaTeX.pm:114
 msgid "Running BibTeX is only supported for LaTeX documents."
-msgstr "BibTeX çalıştırma sadece LaTeX belgeleriyle desteklenmektedir."
+msgstr "Execução do BibTeX só é possível para documentos LaTeX."
 
 #: lib/Padre/Plugin/LaTeX.pm:41
 msgid "View PDF"
-msgstr "PDF Görüntüle"
+msgstr "Visualizar PDF"
 
 #: lib/Padre/Plugin/LaTeX.pm:134
 msgid "Viewing PDF files is only supported for LaTeX documents."
-msgstr "PDF belgelerinin görüntülenmesi sadece LaTeX belgeleri için desteklenmektedir."
+msgstr "Visualizar PDF só é permitido para documentos LaTeX."
 
