--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Changes for Padre-Plugin-LaTeX
 
+0.12   2011.09.01
+        - add interface dependency to Wx::Main (BOWTIE)
+        - add menu_disable method (BOWTIE, ZENOG)
+        - compatibility with Padre 0.89 and later (ZENOG)
+        - support more commands and environments (ZENOG)
+
 0.11   2011.06.21
 	- include Padre::Task::Syntax in the syntax checker (ZENOG)
 	- added Brazilian Portuguese translation (GARU)
